--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-voice/voice": "^3.2.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.29",
     "expo": "^54.0.0",
     "expo-av": "~16.0.7",
+    "expo-linear-gradient": "~15.0.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0",
-    "@react-native-voice/voice": "^3.2.0"
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "babel-preset-expo": "latest"
   }
 }
-
