--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-voice/voice": "^3.2.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.29",
+    "date-fns": "^3.6.0",
     "expo": "^54.0.0",
     "expo-av": "~16.0.7",
     "expo-linear-gradient": "~15.0.7",
@@ -26,6 +27,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
-    "babel-preset-expo": "latest"
+    "@types/react": "~19.1.10",
+    "babel-preset-expo": "latest",
+    "typescript": "~5.9.2"
   }
 }
