--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-voice/voice": "^3.2.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.29",
+    "@supabase/supabase-js": "^2.86.0",
     "date-fns": "^3.6.0",
     "expo": "^54.0.0",
     "expo-av": "~16.0.7",
