--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate deploy"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
@@ -29,7 +31,9 @@
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@types/react": "~19.1.10",
+    "@prisma/client": "^5.19.1",
     "babel-preset-expo": "latest",
+    "prisma": "^5.19.1",
     "typescript": "~5.9.2"
   }
 }
