Modern UI tasarımı: Su takibi, aktiviteler, kilometre taşları ve günlük özet kartları eklendi. Türkçe çeviriler tamamlandı.

--- a/app.json
+++ b/app.json
@@ -7,7 +7,14 @@
     "jsEngine": "hermes",
     "assetBundlePatterns": ["**/*"],
     "android": {
-      "permissions": ["RECORD_AUDIO"]
+      "permissions": ["RECORD_AUDIO"],
+      "usesCleartextTraffic": true
+    },
+    "ios": {
+      "supportsTablet": true
+    },
+    "web": {
+      "bundler": "metro"
     }
   }
 }
