--- a/package.json
+++ b/package.json
@@ -10,20 +10,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-voice/voice": "^3.2.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.29",
     "@supabase/supabase-js": "^2.86.0",
     "date-fns": "^3.6.0",
-    "expo": "^54.0.0",
+    "expo": "~54.0.25",
     "expo-av": "~16.0.7",
+    "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.15.1",
     "react-native-web": "^0.21.0"
   },
   "devDependencies": {
