--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-health": "^1.19.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.15.1",
@@ -32,8 +33,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
-    "@types/react": "~19.1.10",
     "@prisma/client": "^5.19.1",
+    "@types/react": "~19.1.10",
     "babel-preset-expo": "latest",
     "prisma": "^5.19.1",
     "typescript": "~5.9.2"
